fix display alignment

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ body {
   padding-right: 1rem;
   padding-left: 1rem;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
 }
 
